force-app/main/default/objects/RPS__c/RPS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Restricted party screening</label>
</CustomObject>