force-app/main/default/objects/RPS__c/fields/Is_RPS_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_RPS_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Switch to control order screening</description>
    <label>Is RPS Required</label>
    <type>Checkbox</type>
</CustomField>