force-app/main/default/objects/RPS__c/fields/Screening_Source__c.field-meta.xml
<CustomField>
    <fullName>Screening_Source__c</fullName>
    <description>Internal : If screening is based on CSV file upload
External : If screening is done by third party 
None : No screening needed</description>
    <label>Screening Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>