force-app/main/default/objects/RPS__c/fields/Valid_HoldCodes__c.field-meta.xml
<CustomField>
    <fullName>Valid_HoldCodes__c</fullName>
    <description>List of hold codes holding which order can be resubmitted</description>
    <label>Valid HoldCode For Order Submission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>